--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     
                 </div>
                 <div class="no-display-desktop wineem-logo">
-                <img src="./imagenes/Logo.png" alt="Logo de wineem" width="200" height="200">
+                <img src="../imagenes/Logo.png" alt="Logo de wineem" width="200" height="200">
                 </div>
                 
                 <div class="no-display">
