--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
     <head> 
         <title>Wineem</title>
-        <link rel="shortcut icon" href="/Imagenes/favicon (1).ico" type="image/x-icon">
-        <link rel="icon" href="/Imagenes/favicon (1).ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./Imagenes/favicon (1).ico" type="image/x-icon">
+        <link rel="icon" href="./Imagenes/favicon (1).ico" type="image/x-icon">
         <link rel="stylesheet" href="./estilos/estilos.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -33,7 +33,7 @@
                 </div>
                 <nav class="no-display">
                     <ul>
-                        <li> <a class="barra-navegacion" href="./Paginas/accesorios.html" target="_blank">Accesorios</a></li>
+                        <li> <a class="barra-navegacion" href="/Paginas/accesorios.html" target="_blank">Accesorios</a></li>
                         <li> <a class="barra-navegacion" href="./Paginas/Catalogo.html" target="_blank"> Catálogo</a></li>  
                         <li> <a class="barra-navegacion" href="./Paginas/Nosotros.html" target="_blank"> Nosotros</a></li> 
                         <li> <a class="barra-navegacion" href="./Paginas/trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
