--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -3,8 +3,8 @@
 <head>
     
     <title>Accesorios</title>
-    <link rel="shortcut icon" href="/Imagenes/favicon (1).ico" type="image/x-icon">
-    <link rel="icon" href="/Imagenes/favicon (1).ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../Imagenes/favicon (1).ico" type="image/x-icon">
+    <link rel="icon" href="../Imagenes/favicon (1).ico" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
             </div>
             <input type="text" placeholder="Buscar" class="no-display">
             <a href="../index.html"><img src="../imagenes/Logo.png" class="wineem-logo-accesorios-tablet wineem-logo-accesorios-smartphone" alt="Logo de wineem" width="200" height="200"></a>
-            <img src="/imagenes/shopping-bag.png" class="carrito-accesorios" width="25" height="25" alt="Carrito de compra">
+            <img src="../imagenes/shopping-bag.png" class="carrito-accesorios" width="25" height="25" alt="Carrito de compra">
         </header>
         <main class="main-accesorios">
             <section class="galeria-accesorios">
