--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
     <head> 
         <title>Wineem</title>
-        <link rel="shortcut icon" href="./Imagenes/favicon (1).ico" type="image/x-icon">
-        <link rel="icon" href="./Imagenes/favicon (1).ico" type="image/x-icon">
+        <link rel="shortcut icon" href="imagenes/favicon (1).ico" type="image/x-icon">
+        <link rel="icon" href="imagenes/favicon (1).ico" type="image/x-icon">
         <link rel="stylesheet" href="./estilos/estilos.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
