--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 </div>
                 <nav class="no-display">
                     <ul>
-                        <li> <a class="barra-navegacion" href="./Paginas/accesorios.html" target="_blank">Accesorios</a></li>
-                        <li> <a class="barra-navegacion" href="./Paginas/Catalogo.html" target="_blank"> Catálogo</a></li>  
-                        <li> <a class="barra-navegacion" href="./Paginas/Nosotros.html" target="_blank"> Nosotros</a></li> 
-                        <li> <a class="barra-navegacion" href="./Paginas/trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
+                        <li> <a class="barra-navegacion" href="paginas/accesorios.html" target="_blank">Accesorios</a></li>
+                        <li> <a class="barra-navegacion" href="paginas/Catalogo.html" target="_blank"> Catálogo</a></li>  
+                        <li> <a class="barra-navegacion" href="paginas/Nosotros.html" target="_blank"> Nosotros</a></li> 
+                        <li> <a class="barra-navegacion" href="paginas/trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
                     </ul>
                 </nav>
                 
