--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                    <article class="imagen-4"><img src="imagenes/mujer.jpg" alt="Mujer" ></article>
                   
                 </section>
-            </main>ommit
+            </main>
 
 
             <footer>
