--- a/paginas/catalogo.html
+++ b/paginas/catalogo.html
@@ -12,14 +12,14 @@
         <header class="header-catalogo">
             <div class="no-display-desktop">
                     
-                <img src="./imagenes/hamburger_button_menu_icon_155296.png" width="35" alt="Menu-hamburguesa">
+                <img src="../imagenes/hamburger_button_menu_icon_155296.png" width="35" alt="Menu-hamburguesa">
                 
             </div>
             <div class="logo-catalogo">
-                <a href="../index.html"><img src="/imagenes/Logo.png" alt="Logo de wineem" width="200" height="200"></a>
+                <a href="../index.html"><img src="../imagenes/Logo.png" alt="Logo de wineem" width="200" height="200"></a>
             </div>
             <div class="carrito-catalogo">
-                <img src="./imagenes/shopping-bag.png" width="25" height="25" alt="Carrito de compra">
+                <img src="../imagenes/shopping-bag.png" width="25" height="25" alt="Carrito de compra">
             </div>
         </header >
         <main class="main-catalogo">
