--- a/paginas/trabaja con nosotros.html
+++ b/paginas/trabaja con nosotros.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
     <title>Trabaja con nosotros</title>
-    <link rel="shortcut icon" href="/Imagenes/favicon (1).ico" type="image/x-icon">
-    <link rel="icon" href="/Imagenes/favicon (1).ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../Imagenes/favicon (1).ico" type="image/x-icon">
+    <link rel="icon" href="../Imagenes/favicon (1).ico" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/estilos.css">
 
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="conteiner-grid-trabajaconnosotros">
         <header class="header-trabajaconnosotros">
-            <a href="../index.html"><img src="/imagenes/Logo.png" alt="Logo de wineem" width="200" height="200"></a>
+            <a href="../index.html"><img src="../imagenes/Logo.png" alt="Logo de wineem" width="200" height="200"></a>
         </header>
         <main class="main-trabajaconnosotros">
             <section class="grid-trabajaconnosotros">
@@ -27,16 +27,16 @@
         </main>
         <footer class="footer-trabajaconnosotros">
             <div class="logos">
-                <a  href="https://www.instagram.com/espacio_wineem/" target="_blank"><img src="/imagenes/instagram-1.png" alt="Logo instagram" width="25" height="25"></a> 
-                <a  href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="/imagenes/Facebook-1.png" alt="Logo facebook" width="25" height="25"></a>
-                <a  href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="/imagenes/Youtube-1.png" alt="Logo youtube" width="25" height="25"></a>
+                <a  href="https://www.instagram.com/espacio_wineem/" target="_blank"><img src="../imagenes/instagram-1.png" alt="Logo instagram" width="25" height="25"></a> 
+                <a  href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="../imagenes/Facebook-1.png" alt="Logo facebook" width="25" height="25"></a>
+                <a  href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="../imagenes/Youtube-1.png" alt="Logo youtube" width="25" height="25"></a>
             </div>
             <nav class="no-display">
                 <ul>
-                    <li> <a class="barra-navegacion-accesorios" href="./accesorios.html" target="_blank">Accesorios</a></li>
-                    <li> <a class="barra-navegacion-accesorios" href="./catalogo.html" target="_blank"> Catálogo</a></li>  
-                    <li> <a class="barra-navegacion-accesorios" href="./nosotros.html" target="_blank"> Nosotros</a></li> 
-                    <li> <a class="barra-navegacion-accesorios" href="./trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="accesorios.html" target="_blank">Accesorios</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="catalogo.html" target="_blank"> Catálogo</a></li>  
+                    <li> <a class="barra-navegacion-accesorios" href="nosotros.html" target="_blank"> Nosotros</a></li> 
+                    <li> <a class="barra-navegacion-accesorios" href="trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
                 </ul>
             </nav>
         </footer>
