--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -3,8 +3,8 @@
     
 <head>
     <title>Nosotros</title>
-    <link rel="shortcut icon" href="../Imagenes/favicon (1).ico" type="image/x-icon">
-    <link rel="icon" href="../Imagenes/favicon (1).ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
+    <link rel="icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
