--- a/paginas/trabaja con nosotros.html
+++ b/paginas/trabaja con nosotros.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
     <title>Trabaja con nosotros</title>
-    <link rel="shortcut icon" href="../Imagenes/favicon (1).ico" type="image/x-icon">
-    <link rel="icon" href="../Imagenes/favicon (1).ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
+    <link rel="icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/estilos.css">
 
 </head>
