--- a/paginas/trabaja con nosotros.html
+++ b/paginas/trabaja con nosotros.html
@@ -31,12 +31,12 @@
                 <a  href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="../imagenes/Facebook-1.png" alt="Logo facebook" width="25" height="25"></a>
                 <a  href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="../imagenes/Youtube-1.png" alt="Logo youtube" width="25" height="25"></a>
             </div>
-            <nav class="no-display">
+            <nav class="no-display"
                 <ul>
-                    <li> <a class="barra-navegacion-accesorios" href="accesorios.html" target="_blank">Accesorios</a></li>
-                    <li> <a class="barra-navegacion-accesorios" href="catalogo.html" target="_blank"> Catálogo</a></li>  
-                    <li> <a class="barra-navegacion-accesorios" href="nosotros.html" target="_blank"> Nosotros</a></li> 
-                    <li> <a class="barra-navegacion-accesorios" href="trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="./accesorios.html" target="_blank">Accesorios</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="./catalogo.html" target="_blank"> Catálogo</a></li>  
+                    <li> <a class="barra-navegacion-accesorios" href="./nosotros.html" target="_blank"> Nosotros</a></li> 
+                    <li> <a class="barra-navegacion-accesorios" href="./trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
                 </ul>
             </nav>
         </footer>
