--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -36,10 +36,10 @@
             <a class="logos" href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="../imagenes/Youtube-1.png" alt="Logo youtube" width="25" height="25"></a>
             <nav >
                 <ul class="no-display-smartphone no-display">
-                    <li> <a class="barra-navegacion-accesorios" href="accesorios.html" target="_blank">Accesorios</a></li>
-                    <li> <a class="barra-navegacion-accesorios" href="catalogo.html" target="_blank"> Catálogo</a></li>  
-                    <li> <a class="barra-navegacion-accesorios" href="nosotros.html" target="_blank"> Nosotros</a></li> 
-                    <li> <a class="barra-navegacion-accesorios" href="trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="./accesorios.html" target="_blank">Accesorios</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="./catalogo.html" target="_blank"> Catálogo</a></li>  
+                    <li> <a class="barra-navegacion-accesorios" href="./nosotros.html" target="_blank"> Nosotros</a></li> 
+                    <li> <a class="barra-navegacion-accesorios" href="./trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
                 </ul>
             </nav>
             
