--- a/paginas/catalogo.html
+++ b/paginas/catalogo.html
@@ -38,10 +38,10 @@
             </div>
             <nav class="no-display">
                 <ul>
-                    <li> <a class="barra-navegacion-accesorios" href="accesorios.html" target="_blank">Accesorios</a></li>
-                    <li> <a class="barra-navegacion-accesorios" href="catalogo.html" target="_blank"> Catálogo</a></li>  
-                    <li> <a class="barra-navegacion-accesorios" href="nosotros.html" target="_blank"> Nosotros</a></li> 
-                    <li> <a class="barra-navegacion-accesorios" href="trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="./accesorios.html" target="_blank">Accesorios</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="./catalogo.html" target="_blank"> Catálogo</a></li>  
+                    <li> <a class="barra-navegacion-accesorios" href="./nosotros.html" target="_blank"> Nosotros</a></li> 
+                    <li> <a class="barra-navegacion-accesorios" href="./trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
                 </ul>
             </nav>
         </footer>
