--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -49,7 +49,7 @@
             <!--barra de nav boostrap-->
             
             <div class=" wineem-logo">
-                <a href="./index.html"><img  src="../imagenes/Logo.png" width="200" height="200" alt="Logo wineem"></a>
+                <a href="../index.html"><img  src="../imagenes/Logo.png" width="200" height="200" alt="Logo wineem"></a>
                 </div>
                 <img class="carrito no-display-desktop" src="../imagenes/shopping-bag.png" width="25" height="25" alt="Carrito de compra">
         </header>
