--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         
         <div class="popUp  rellenoPopup"> 
-        <p class=" letraBlanca ">Envio Gratis</p>
+        <p class=" letraBlanca "><img class="envio" src="./imagenes/entrega(1).png" alt="Envio">Envio Gratis</p>
         </div>
         <div class="contenedor-grid">    
             <header>
@@ -82,7 +82,7 @@
                 </nav>
                 <!--barra de nav boostrap-->
                 <div class="no-display-desktop wineem-logo">
-                <a href="./index.html"><img  src="./imagenes/Logo.png" width="200" height="200" alt="Logo wineem"></a>
+                <a href="./index.html"><img  src="./imagenes/Logo.png" width="150" height="150" alt="Logo wineem"></a>
                 </div>
                 <img class="carrito" src="./imagenes/shopping-bag.png" width="25" height="25" alt="Carrito de compra">
 
@@ -100,10 +100,10 @@
 
 
             <footer>
-                <a class="logos" href="https://www.instagram.com/espacio_wineem/" target="_blank"><img src="imagenes/instagram-1.png" alt="Logo instagram" width="25" height="25"></a> 
-                <a class="logos" href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="imagenes/Facebook-1.png" alt="Logo facebook" width="25" height="25"></a>
-                <a class="logos" href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="imagenes/Youtube-1.png" alt="Logo youtube" width="25" height="25"></a>
-                &copy; Desarrolado por Julian Rinaudo
+                <a class="logos" href="https://www.instagram.com/espacio_wineem/" target="_blank"><img src="imagenes/instagram-1.png" alt="Logo instagram" width="20" height="20"></a> 
+                <a class="logos" href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="imagenes/Facebook-1.png" alt="Logo facebook" width="20" height="20"></a>
+                <a class="logos" href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="imagenes/Youtube-1.png" alt="Logo youtube" width="20" height="20"></a>
+                
 
             </footer>
         </div>        
