--- a/paginas/trabaja con nosotros.html
+++ b/paginas/trabaja con nosotros.html
@@ -51,10 +51,10 @@
             </nav>
             <!--barra de nav boostrap-->
             
-            <div class=" wineem-logo">
-                <a href="../index.html"><img  src="../imagenes/Logo.png" width="200" height="200" alt="Logo wineem"></a>
+            <div >
+                <a href="../index.html"><img class="logo-wineem-tcn" src="../imagenes/Logo.png" width="150" height="150" alt="Logo wineem"></a>
                 </div>
-                <img class="carrito no-display-desktop" src="../imagenes/shopping-bag.png" width="25" height="25" alt="Carrito de compra">
+                <img class="carrito-tcn no-display-desktop" src="../imagenes/shopping-bag.png" width="25" height="25" alt="Carrito de compra">
         </header>
         <main class="main-trabajaconnosotros">
             <section class="grid-trabajaconnosotros">
