--- a/paginas/catalogo.html
+++ b/paginas/catalogo.html
@@ -50,9 +50,9 @@
             <!--barra de nav boostrap-->
             
             <div class=" wineem-logo">
-                <a href="../index.html"><img  src="../imagenes/Logo.png" width="200" height="200" alt="Logo wineem"></a>
+                <a href="../index.html"><img  src="../imagenes/Logo.png" width="150" height="150" alt="Logo wineem"></a>
                 </div>
-                <img class="carrito no-display-desktop" src="../imagenes/shopping-bag.png" width="25" height="25" alt="Carrito de compra">
+                <img class="carrito-catalogo no-display-desktop" src="../imagenes/shopping-bag.png" width="25" height="25" alt="Carrito de compra">
         </header >
         <main class="main-catalogo">
             <div >
@@ -64,9 +64,9 @@
 
         <footer class="footer-catalogo">
             <div class="logos">
-                <a  href="https://www.instagram.com/espacio_wineem/" target="_blank"><img src="../imagenes/instagram-1.png" alt="Logo instagram" width="25" height="25"></a> 
-                <a  href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="../imagenes/Facebook-1.png" alt="Logo facebook" width="25" height="25"></a>
-                <a  href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="../imagenes/Youtube-1.png" alt="Logo youtube" width="25" height="25"></a>
+                <a  href="https://www.instagram.com/espacio_wineem/" target="_blank"><img src="../imagenes/instagram-1.png" alt="Logo instagram" width="20" height="20"></a> 
+                <a  href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="../imagenes/Facebook-1.png" alt="Logo facebook" width="20" height="20"></a>
+                <a  href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="../imagenes/Youtube-1.png" alt="Logo youtube" width="20" height="20"></a>
             </div>
             <nav class="no-display">
                 <ul>
