--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -8,11 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    
 </head>
 <body>
     <div class="contenedor-grid-accesorios">
         <header class="header-accesorios">
-            <!--barra de nav boostrap-->
+            <!--barra de nav bootstrap-->
             <nav class="navbar   no-display-desktop">
                 <div class="container-fluid">
 
@@ -47,19 +48,70 @@
                   </div>
                 </div>
             </nav>
-            <!--barra de nav boostrap-->
+            <!--barra de nav bootstrap-->
                     <input type="text" placeholder="Buscar" class="no-display">
                     <a href="../index.html"><img src="../imagenes/Logo.png" class="wineem-logo-accesorios-tablet wineem-logo-accesorios-smartphone" alt="Logo de wineem" width="150" height="150"></a>
                     <img src="../imagenes/shopping-bag.png" class="carrito-accesorios" width="25" height="25" alt="Carrito de compra">
                 </header>
                 <main class="main-accesorios">
                     <section class="galeria-accesorios">
-                        <span><img class="imagen1" src="../imagenes/accesorio-1.jpg" alt="cuello termico"><p>CUELLO TERMICO</p><p>$999</p></span>
-                        <span><img class="imagen2" src="../imagenes/accesorio-2.jpg" alt="gorro"><p>GORRO ALOE AVELLANA</p><p>$999</p></span>
-                        <span><img class="imagen3" src="../imagenes/accesorio-3.jpg" alt="bolso"><p>BOLSO ARTIS</p><p>$999</p></span>
-                        <span><img class="imagen4" src="../imagenes/accesorio-4.jpg" alt="mochila"><p>MOCHILA CRIS</p><p>$999</p></span>
-                        <span><img class="imagen5" src="../imagenes/accesorio-5.jpg" alt="chula"><p>SCRUNCHIES</p><p>$999</p></span>
-                        <span><img class="imagen6" src="../imagenes/accesorio-6.jpg" alt="neceser"><p>NECESER YAEL</p><p>$999</p></span>
+                      <!--card de bootstrap-->
+                      <div class="card box-shadow " style="width: 18rem;">
+                        <img src="../imagenes/accesorio-1.jpg" class="card-img-top " alt="cuello termico">
+                        <div class="card-body">
+                          <p class="lead">Cuello Termico</p>
+                        </div>
+                        <div>
+                          <p>$999</p>
+                        </div>
+                      </div>
+                      <div class="card box-shadow" style="width: 18rem;">
+                        <img src="../imagenes/accesorio-2.jpg" class="card-img-top" alt="gorro">
+                        
+                        <div class="card-body">
+                          <p class="lead">Gorro Aloe Avellana</p>
+                        </div>
+                        <div>
+                          <p>$999</p>
+                        </div>
+                      </div>
+                      <div class="card box-shadow" style="width: 18rem;">
+                        <img src="../imagenes/accesorio-3.jpg" class="card-img-top " alt="bolso">
+                        <div class="card-body">
+                          <p class="lead">Bolso Artis</p>
+                        </div>
+                        <div> 
+                          <p>$999</p>
+                        </div>
+                      </div>
+                      <div class="card box-shadow" style="width: 18rem;">
+                        <img src="../imagenes/accesorio-4.jpg" class="card-img-top" alt="mochila">
+                        <div class="card-body">
+                          <p class="lead">Mochila Cris</p>
+                        </div>
+                        <div> 
+                          <p>$999</p>
+                        </div>
+                      </div>
+                      <div class="card box-shadow" style="width: 18rem;">
+                        <img src="../imagenes/accesorio-5.jpg" class="card-img-top" alt="scrunchies">
+                        <div class="card-body">
+                          <p class="lead">Scrunchies</p>
+                        </div>
+                        <div> 
+                          <p>$999</p>
+                        </div>
+                      </div>
+                      <div class="card box-shadow" style="width: 18rem;">
+                        <img src="../imagenes/accesorio-6.jpg" class="card-img-top" alt="neceser">
+                        <div class="card-body">
+                          <p class="lead">Neceser Yael</p>
+                        </div>
+                        <div> 
+                          <p>$999</p>
+                        </div>
+                      </div>
+                      <!--card de bootstrap-->
                     </section>
                 </main>
 
