agregado de animaciones en imagenes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="contenedor-grid">    
             <header>
-                <div class="no-display">
+                <div class="no-display no-display-smartphone">
                     <a class="redes" href="https://www.instagram.com/espacio_wineem/" target="_blank"><img src="./imagenes/instagram.png" alt="Logo instagram" width="25" height="25"></a> 
                     <a class="logos"  href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="./imagenes/Facebook.png" alt="Logo facebook" width="25" height="25"></a>
                     <a class="logos"  href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="./imagenes/Youtube.png" alt="Logo youtube" width="25" height="25"></a>  
@@ -88,10 +88,12 @@
 
             </header>
             <main>
-              
+              <div class="no-display-desktop no-display ">
+              <img class="img-bnv-smarthphone" src="./imagenes/imagen-bienvenida-smarthphone.jpg" alt="invierno-otoño">
+              </div>
                <section class="galeria">
-                    <article class="imagen-1 "><img src="./imagenes/Imagen de bienvenida.jpg" alt="Imagen de bienvenida" ></article>
-                   <article class="imagen-2"><img src="./imagenes/hombre.jpg" alt="hombre" ></article>
+                  <article class="imagen-1 no-display-smartphone"><img src="./imagenes/Imagen de bienvenida.jpg" alt="Imagen de bienvenida" ></article>
+                   <article class="imagen-2 shadow-drop-2-center"><img src="./imagenes/hombre.jpg" alt="hombre" ></article>
                    <article class="imagen-3"><img src="./imagenes/accesorios.jpg" alt="Accesorios"></article>
                    <article class="imagen-4"><img src="./imagenes/mujer.jpg" alt="Mujer" ></article>
                   
@@ -116,7 +118,7 @@
 
 
 
-
+ 
 
 
 
