--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -49,7 +49,7 @@
                 </div>
             </nav>
             <!--barra de nav bootstrap-->
-                    <input type="text" placeholder="Buscar" class="no-display">
+                    <input type="text" placeholder="Buscar" class="no-display no-display-smartphone">
                     <a href="../index.html"><img src="../imagenes/Logo.png" class="wineem-logo-accesorios-tablet wineem-logo-accesorios-smartphone" alt="Logo de wineem" width="150" height="150"></a>
                     <img src="../imagenes/shopping-bag.png" class="carrito-accesorios" width="25" height="25" alt="Carrito de compra">
                 </header>
