--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -82,7 +82,7 @@
             <a class="logos" href="https://www.instagram.com/espacio_wineem/" target="_blank"><img src="../imagenes/instagram-1.png" alt="Logo instagram" width="20" height="20"></a> 
             <a class="logos" href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="../imagenes/Facebook-1.png" alt="Logo facebook" width="20" height="20"></a>
             <a class="logos" href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="../imagenes/Youtube-1.png" alt="Logo youtube" width="20" height="20"></a>
-            <nav class="no-display">
+            <nav class="no-display no-display-smartphone">
                 <ul>
                     <li> <a class="barra-navegacion-accesorios" href="./accesorios.html" target="_blank">Accesorios</a></li>
                     <li> <a class="barra-navegacion-accesorios" href="./catalogo.html" target="_blank"> Catálogo</a></li>  
