--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 
             <footer>
                 <div>
-                  <a class="logos" href="https://www.instagram.com/espacio_wineem/" target="_blank"><img src="../imagenes/instagram-1.png" alt="Logo instagram" width="20" height="20"></a> 
-                  <a class="logos" href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="../imagenes/Facebook-1.png" alt="Logo facebook" width="20" height="20"></a>
-                  <a class="logos" href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="../imagenes/Youtube-1.png" alt="Logo youtube" width="20" height="20"></a>
+                  <a class="logos" href="https://www.instagram.com/espacio_wineem/" target="_blank"><img src="./imagenes/instagram-1.png" alt="Logo instagram" width="20" height="20"></a> 
+                  <a class="logos" href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="./imagenes/Facebook-1.png" alt="Logo facebook" width="20" height="20"></a>
+                  <a class="logos" href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="./imagenes/Youtube-1.png" alt="Logo youtube" width="20" height="20"></a>
                   
                  </div> 
                  <p class="no-display-smartphone text-muted">&copy; 2021 Desarrollado por Julian Rinaudo</p>
