Agregado inicio en barra nav

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="offcanvas-body">
                           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                 <li class="nav-item">
-                                  <a class="nav-link active barra-navegacion" aria-current="page"  href="./paginas/accesorios.html">Accesorios</a>
+                                  <a class="nav-link active barra-navegacion" aria-current="page"  href="./index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item ">
                                   <a class="nav-link barra-navegacion"  href="./paginas/catalogo.html">Catálogo</a>
@@ -64,7 +64,7 @@
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link active barra-navegacion"  href="./paginas/accesorios.html">Accesorios</a>
+                            <a class="nav-link active barra-navegacion" href="./index.html">Inicio</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link barra-navegacion" href="./paginas/catalogo.html">Catálogo</a>
@@ -94,7 +94,7 @@
                <section class="galeria">
                   <article class="imagen-1 no-display-smartphone"><img src="./imagenes/Imagen de bienvenida.jpg" alt="Imagen de bienvenida" ></article>
                    <article class="imagen-2 shadow-drop-2-center"><img src="./imagenes/hombre.jpg" alt="hombre" ></article>
-                   <article class="imagen-3"><img src="./imagenes/accesorios.jpg" alt="Accesorios"></article>
+                   <a href="./paginas/accesorios.html"> <img class="imagen-3" src="./imagenes/accesorios.jpg" alt="Accesorios"></a>
                    <article class="imagen-4"><img src="./imagenes/mujer.jpg" alt="Mujer" ></article>
                   
                 </section>
