--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -84,7 +84,7 @@
             <a class="logos" href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="../imagenes/Youtube-1.png" alt="Logo youtube" width="20" height="20"></a>
             <nav class="no-display no-display-smartphone">
                 <ul>
-                    <li> <a class="barra-navegacion-accesorios" href="./accesorios.html" target="_blank">Accesorios</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="../index.html" target="_blank">Inicio</a></li>
                     <li> <a class="barra-navegacion-accesorios" href="./catalogo.html" target="_blank"> Catálogo</a></li>  
                     <li> <a class="barra-navegacion-accesorios" href="./nosotros.html" target="_blank"> Nosotros</a></li> 
                     <li> <a class="barra-navegacion-accesorios" href="./trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
