--- a/paginas/trabaja con nosotros.html
+++ b/paginas/trabaja con nosotros.html
@@ -75,7 +75,7 @@
             </div>
             <nav class="no-display no-display-smartphone">
                 <ul>
-                    <li> <a class="barra-navegacion-accesorios" href="./accesorios.html" target="_blank">Accesorios</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="../index.html" target="_blank">Inicio</a></li>
                     <li> <a class="barra-navegacion-accesorios" href="./catalogo.html" target="_blank"> Catálogo</a></li>  
                     <li> <a class="barra-navegacion-accesorios" href="./nosotros.html" target="_blank"> Nosotros</a></li> 
                     <li> <a class="barra-navegacion-accesorios" href="./trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
