agregue sass a todo el proyecyo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         
         <div class="popUp  rellenoPopup"> 
-        <p><img  src="./imagenes/entrega(1).png" alt="Envio">Envio Gratis</p>
+        <p class="text-popUp"><img  src="./imagenes/entrega(1).png" alt="Envio">Envio Gratis</p>
         </div>
         <div class="contenedor-grid">    
             <header>
