--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link rel="icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="../css/destino.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     
 </head>
@@ -120,7 +120,7 @@
                     <a class="logos" href="https://www.facebook.com/espaciowineem/" target="_blank"><img src="../imagenes/Facebook-1.png" alt="Logo facebook" width="20" height="20"></a>
                     <a class="logos" href="https://www.youtube.com/channel/UClbEQOrmt7bMHKiDj9-aLKA" target="_blank"><img src="../imagenes/Youtube-1.png" alt="Logo youtube" width="20" height="20"></a>
                     <nav >
-                        <ul class="no-display-smartphone no-display">
+                        <ul class="no-display-smartphone no-display ">
                             <li> <a class="barra-navegacion-accesorios" href="../index.html" target="_blank">Inicio</a></li>
                             <li> <a class="barra-navegacion-accesorios" href="./catalogo.html" target="_blank"> Catálogo</a></li>  
                             <li> <a class="barra-navegacion-accesorios" href="./nosotros.html" target="_blank"> Nosotros</a></li> 
