--- a/paginas/trabaja con nosotros.html
+++ b/paginas/trabaja con nosotros.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link rel="icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="../css/destino.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 </head>
@@ -51,9 +51,9 @@
             </nav>
             <!--barra de nav boostrap-->
             
-            <div >
-                <a href="../index.html"><img class="logo-wineem-tcn" src="../imagenes/Logo.png" width="150" height="150" alt="Logo wineem"></a>
-                </div>
+            <div class="logo-wineem-tcn">
+                <a href="../index.html"><img  src="../imagenes/Logo.png" width="150" height="150" alt="Logo wineem"></a>
+            </div>
                 <img class="carrito-tcn no-display-desktop" src="../imagenes/shopping-bag.png" width="25" height="25" alt="Carrito de compra">
         </header>
         <main class="main-trabajaconnosotros">
@@ -78,7 +78,7 @@
                     <li> <a class="barra-navegacion-accesorios" href="../index.html" target="_blank">Inicio</a></li>
                     <li> <a class="barra-navegacion-accesorios" href="./catalogo.html" target="_blank"> Catálogo</a></li>  
                     <li> <a class="barra-navegacion-accesorios" href="./nosotros.html" target="_blank"> Nosotros</a></li> 
-                    <li> <a class="barra-navegacion-accesorios" href="./trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="./accesorios.html" target="_blank"> Accesorios</a></li>
                 </ul>
             </nav>
         </footer>
