--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <title>Wineem</title>
         <link rel="shortcut icon" href="./imagenes/favicon (1).ico" type="image/x-icon">
         <link rel="icon" href="./imagenes/favicon (1).ico" type="image/x-icon">
+        <!--SEO-->
+        <meta name="keywords" content="ropa, mujer, hombre, tiempo libre, ropa deportiva, indumentaria">
+        <!--SEO-->
+        
+        <!--DESCRIPCION-->
+        <meta name="description" content="Somos la primera empresa de venta de indumentaria para el Tiempo Libre por catálogo. 
+                                          Se proponen dos grandes colecciones por año: Primavera-Verano y Otoño-Invierno. 
+                                          Nuestra indumentaria va tanto en hombre como en mujer, encontrando ropa de estilo fitness y casual.">
+        <!--DESCRIPCION-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/destino.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
