--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -3,6 +3,11 @@
 <head>
     
     <title>Accesorios</title>
+    <!--DESCRIPCION-->
+    <meta name="description" content="Somos la primera empresa de venta de indumentaria para el Tiempo Libre por catálogo. 
+                                      Se proponen dos grandes colecciones por año: Primavera-Verano y Otoño-Invierno. 
+                                      Nuestra indumentaria como accesorios van tanto en hombre como en mujer, encontrando ropa de estilo fitness y casual.">
+    <!--DESCRIPCION-->
     <link rel="shortcut icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link rel="icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
