--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -3,6 +3,9 @@
     
 <head>
     <title>Nosotros</title>
+    <!--DESCRIPCION-->
+<meta name="description" content="Empresa de venta de indumentaria por catalogo.">
+<!--DESCRIPCION-->
     <link rel="shortcut icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link rel="icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
