--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -3,6 +3,9 @@
 <head>
     
     <title>Accesorios</title>
+     <!--SEO-->
+     <meta name="keywords" content="accesorios, mujer, hombre">
+     <!--SEO-->
     <!--DESCRIPCION-->
     <meta name="description" content="Somos la primera empresa de venta de indumentaria para el Tiempo Libre por catálogo. 
                                       Se proponen dos grandes colecciones por año: Primavera-Verano y Otoño-Invierno. 
