--- a/paginas/catalogo.html
+++ b/paginas/catalogo.html
@@ -3,6 +3,9 @@
 <head>
    
     <title>Catálogo</title>
+     <!--SEO-->
+     <meta name="keywords" content="catalogo, venta por catalogo, mujer, hombre, tiempo libre, fitness, indumentaria">
+     <!--SEO-->
     <!--DESCRIPCION-->
 <meta name="description" content="Catalogo de indumentaria. 
                                   Se proponen dos grandes colecciones por año: Primavera-Verano y Otoño-Invierno. 
