--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -2,6 +2,9 @@
 <html lang="es">
     
 <head>
+   <!--SEO-->
+   <meta name="keywords" content="wineem, mujer, hombre, tiempo libre, cordoba, indumentaria">
+   <!--SEO-->
     <title>Nosotros</title>
     <!--DESCRIPCION-->
 <meta name="description" content="Empresa de venta de indumentaria por catalogo.">
