--- a/paginas/trabaja con nosotros.html
+++ b/paginas/trabaja con nosotros.html
@@ -2,6 +2,12 @@
 <html lang="es">
 <head>
     <title>Trabaja con nosotros</title>
+     <!--SEO-->
+     <meta name="keywords" content="ropa, mujer, hombre, empleo, venta directa, trabajo, indumentaria">
+     <!--SEO-->
+     <!--DESCRIPCION-->
+    <meta name="description" content="Sumate como vendedor/a y sumate a nuestro equipo">
+    <!--DESCRIPCION-->
     <link rel="shortcut icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link rel="icon" href="../imagenes/favicon (1).ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
