--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -65,7 +65,7 @@
                     <section class="galeria-accesorios">
                       <!--card de bootstrap-->
                       <div class="card box-shadow " style="width: 15rem;">
-                        <img src="../imagenes/accesorio-1.jpg" class="card-img-top " alt="cuello termico">
+                        <img src="../imagenes/accesorio-1-min.jpg" class="card-img-top " alt="cuello termico">
                         <div class="card-body">
                           <p class="lead">Cuello Termico</p>
                         </div>
@@ -74,7 +74,7 @@
                         </div>
                       </div>
                       <div class="card box-shadow" style="width: 15rem;">
-                        <img src="../imagenes/accesorio-2.jpg" class="card-img-top" alt="gorro">
+                        <img src="../imagenes/accesorio-2-min.jpg" class="card-img-top" alt="gorro">
                         
                         <div class="card-body">
                           <p class="lead">Gorro Aloe Avellana</p>
@@ -84,7 +84,7 @@
                         </div>
                       </div>
                       <div class="card box-shadow" style="width: 15rem;">
-                        <img src="../imagenes/accesorio-3.jpg" class="card-img-top " alt="bolso">
+                        <img src="../imagenes/accesorio-3-min.jpg" class="card-img-top " alt="bolso">
                         <div class="card-body">
                           <p class="lead">Bolso Artis</p>
                         </div>
@@ -93,7 +93,7 @@
                         </div>
                       </div>
                       <div class="card box-shadow" style="width: 15rem;">
-                        <img src="../imagenes/accesorio-4.jpg" class="card-img-top" alt="mochila">
+                        <img src="../imagenes/accesorio-4-min.jpg" class="card-img-top" alt="mochila">
                         <div class="card-body">
                           <p class="lead">Mochila Cris</p>
                         </div>
@@ -102,7 +102,7 @@
                         </div>
                       </div>
                       <div class="card box-shadow" style="width: 15rem;">
-                        <img src="../imagenes/accesorio-5.jpg" class="card-img-top" alt="scrunchies">
+                        <img src="../imagenes/accesorio-5-min.jpg" class="card-img-top" alt="scrunchies">
                         <div class="card-body">
                           <p class="lead">Scrunchies</p>
                         </div>
@@ -111,7 +111,7 @@
                         </div>
                       </div>
                       <div class="card box-shadow" style="width: 15rem;">
-                        <img src="../imagenes/accesorio-6.jpg" class="card-img-top" alt="neceser">
+                        <img src="../imagenes/accesorio-6-min.jpg" class="card-img-top" alt="neceser">
                         <div class="card-body">
                           <p class="lead">Neceser Yael</p>
                         </div>
